--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.7",
+    "dompurify": "^3.2.1",
     "next": "15.0.3",
     "qs": "^6.13.1",
     "react": "19.0.0-rc-66855b96-20241106",
