--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qs": "^6.13.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-kakao-maps-sdk": "^1.1.27",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
