--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.7",
     "dompurify": "^3.2.1",
+    "lodash": "^4.17.21",
     "next": "15.0.3",
     "qs": "^6.13.1",
     "react": "19.0.0-rc-66855b96-20241106",
